--- a/index.html
+++ b/index.html
@@ -5,9 +5,10 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8">
 		<meta name='viewport' content='width=device-width'>
   		<meta property="og:title" content="Proroci korony" />
-  		<link rel="stylesheet" href="proroci.css">
+  		<link rel="stylesheet" href="main.css">
 		<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 		<script src="https://code.highcharts.com/highcharts.js"></script>
+		<script src="https://code.highcharts.com/modules/annotations.js"></script>
 		<script src="https://code.highcharts.com/modules/data.js"></script>
 		<script src="https://code.highcharts.com/modules/series-label.js"></script>
 		<script src="https://code.highcharts.com/modules/exporting.js"></script>
@@ -19,7 +20,8 @@
 		<script src="https://www.highcharts.com/samples/static/highslide.config.js" charset="utf-8"></script>
 		<link rel="stylesheet" type="text/css" href="https://www.highcharts.com/samples/static/highslide.css" />
 
-		<script src="proroci.js"></script>
+		<script src="quotes.js"></script>
+		<script src="main.js"></script>
 	</head>
 	<body>
 		<figure class="highcharts-figure">
