--- a/index.html
+++ b/index.html
@@ -7,25 +7,9 @@
   		<meta property="og:title" content="Proroci korony" />
   		<link rel="stylesheet" href="main.css">
 		<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
-		<script src="https://code.highcharts.com/highcharts.js"></script>
-		<script src="https://code.highcharts.com/modules/annotations.js"></script>
-		<script src="https://code.highcharts.com/modules/data.js"></script>
-		<script src="https://code.highcharts.com/modules/series-label.js"></script>
-		<script src="https://code.highcharts.com/modules/exporting.js"></script>
-		<script src="https://code.highcharts.com/modules/export-data.js"></script>
-		<script src="https://code.highcharts.com/modules/accessibility.js"></script>
-
-		<!-- Additional files for the Highslide popup effect -->
-		<script src="https://www.highcharts.com/samples/static/highslide-full.min.js"></script>
-		<script src="https://www.highcharts.com/samples/static/highslide.config.js" charset="utf-8"></script>
-		<link rel="stylesheet" type="text/css" href="https://www.highcharts.com/samples/static/highslide.css" />
-
-		<script src="quotes.js"></script>
 		<script src="main.js"></script>
 	</head>
 	<body>
-		<figure class="highcharts-figure">
-  			<div id="container"></div>
-		</figure>
+		<iframe src="chart-sk.html" frameborder="0" marginheight="0" marginwidth="0" width="100%" height="100%" scrolling="auto"></iframe>
 	</body>
 </html>
