--- a/chart.html
+++ b/chart.html
@@ -8,25 +8,27 @@
   		<link rel="stylesheet" href="chart.css">
 		<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 		<script src="https://code.highcharts.com/highcharts.js"></script>
-		<script src="https://code.highcharts.com/modules/annotations.js"></script>
+		<!-- <script src="https://code.highcharts.com/modules/annotations.js"></script> -->
+		<script src="https://code.highcharts.com/8.2.0/modules/annotations.js"></script>
 		<script src="https://code.highcharts.com/modules/data.js"></script>
 		<script src="https://code.highcharts.com/modules/series-label.js"></script>
 		<script src="https://code.highcharts.com/modules/exporting.js"></script>
 		<script src="https://code.highcharts.com/modules/export-data.js"></script>
 		<script src="https://code.highcharts.com/modules/accessibility.js"></script>
-
-		<!-- Additional files for the Highslide popup effect -->
 		<script src="https://www.highcharts.com/samples/static/highslide-full.min.js"></script>
 		<script src="https://www.highcharts.com/samples/static/highslide.config.js" charset="utf-8"></script>
 		<link rel="stylesheet" type="text/css" href="https://www.highcharts.com/samples/static/highslide.css" />
 
-		<script src="jquery-csv.js"></script>
-		<script src="quotes-sk.js"></script>
+		<script type='text/javascript' > 
+        	window.quotes = {};
+    	</script>
+		<script src="jquery.csv.min.js"></script>
 		<script src="chart.js"></script>
+		<script src="quotes-sk.js"></script>
 	</head>
 	<body>
-		<!-- <figure class="highcharts-figure"> -->
+		<figure class="highcharts-figure">
   			<div id="container"></div>
-		<!-- </figure> -->
+		</figure>
 	</body>
 </html>
