--- a/index.html
+++ b/index.html
@@ -10,6 +10,6 @@
 		<script src="main.js"></script>
 	</head>
 	<body>
-		<iframe src="chart-sk.html" frameborder="0" marginheight="0" marginwidth="0" width="100%" height="100%" scrolling="auto"></iframe>
+		<iframe src="chart.html" frameborder="0" marginheight="0" marginwidth="0" width="100%" height="100%" scrolling="auto"></iframe>
 	</body>
 </html>
