--- a/chart.html
+++ b/chart.html
@@ -25,6 +25,7 @@
 		<script src="jquery.csv.min.js"></script>
 		<script src="chart.js"></script>
 		<script src="quotes-sk.js"></script>
+		<script src="quotes-cz.js"></script>
 	</head>
 	<body>
 		<figure class="highcharts-figure">
