--- a/chart.html
+++ b/chart.html
@@ -8,8 +8,7 @@
   		<link rel="stylesheet" href="chart.css">
 		<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 		<script src="https://code.highcharts.com/highcharts.js"></script>
-		<!-- <script src="https://code.highcharts.com/modules/annotations.js"></script> -->
-		<script src="https://code.highcharts.com/8.2.0/modules/annotations.js"></script>
+		<script src="https://code.highcharts.com/modules/annotations.js"></script>
 		<script src="https://code.highcharts.com/modules/data.js"></script>
 		<script src="https://code.highcharts.com/modules/series-label.js"></script>
 		<script src="https://code.highcharts.com/modules/exporting.js"></script>
@@ -24,12 +23,13 @@
     	</script>
 		<script src="jquery.csv.min.js"></script>
 		<script src="chart.js"></script>
+		<script src="i18n.js"></script>
 		<script src="quotes-sk.js"></script>
 		<script src="quotes-cz.js"></script>
 	</head>
 	<body>
-		<figure class="highcharts-figure">
+		<!-- <figure class="highcharts-figure"> -->
   			<div id="container"></div>
-		</figure>
+		<!-- </figure> -->
 	</body>
 </html>
