--- a/index.html
+++ b/index.html
@@ -6,10 +6,46 @@
 		<meta name='viewport' content='width=device-width'>
   		<meta property="og:title" content="Proroci korony" />
   		<link rel="stylesheet" href="main.css">
-		<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
+  		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
+  		<script async defer crossorigin="anonymous" src="https://connect.facebook.net/sk_SK/sdk.js#xfbml=1&version=v8.0" nonce="EQAkJvAR"></script>
+		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
+		<script src="i18n.js"></script>
 		<script src="main.js"></script>
 	</head>
 	<body>
-		<iframe src="chart.html?country=sk" frameborder="0" marginheight="0" marginwidth="0" width="100%" height="100%" scrolling="auto"></iframe>
+		<div class="container-fluid">
+			<div id="fb-root" class="fb-root"></div>
+			<nav class="navbar navbar-expand-lg navbar-light bg-light">
+			  <a class="navbar-brand" href="">Proroci korony</a>
+			  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+			    <span class="navbar-toggler-icon"></span>
+			  </button>
+			  <div class="collapse navbar-collapse" id="navbarNavDropdown">
+			    <ul class="navbar-nav">
+			      <li class="nav-item nav-link" id="sr">SR</li>
+			      <li class="nav-item nav-link" id="cr">CR</li>
+
+			      <div class="nav-item fb-share-button" data-href="https://granci.github.io/proroci-korony/" data-layout="button_count" data-size="small">
+			      	<a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https://granci.github.io/proroci-korony/&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore"/>
+			      </div>
+
+			      <!-- <li class="nav-item dropdown">
+			        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+			          Jazyk
+			        </a>
+			        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+			          <a class="dropdown-item" href="#">Slovensky</a>
+			          <a class="dropdown-item" href="#">Cesky</a>
+			          <a class="dropdown-item" href="#">English</a>
+			        </div>
+			      </li> -->
+			    </ul>
+			  </div>
+			</nav>
+			<div class="chart-container">
+				<iframe id="chart" src="https://granci.github.io/proroci-korony/chart.html?country=sr&lang=sk" frameborder="0" marginheight="0" marginwidth="0" width="100%" height="100%" scrolling="auto"></iframe>
+			</div>
+		</div>
 	</body>
 </html>
