--- a/chart/index.html
+++ b/chart/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Proroci korony</title>
+		<title>Corona prophets</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8">
 		<meta name='viewport' content='width=device-width'>
-  		<meta property="og:title" content="Proroci korony" />
+  		<meta property="og:title" content="Corona prophets" />
   		<link rel="stylesheet" href="chart.css">
 		<script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
 		<script src="https://code.highcharts.com/highcharts.js"></script>
@@ -21,11 +21,12 @@
 		<script type='text/javascript' > 
         	window.quotes = {};
     	</script>
-		<script src="jquery.csv.min.js"></script>
+		<script src="../jquery.csv.min.js"></script>
 		<script src="chart.js"></script>
-		<script src="i18n.js"></script>
-		<script src="quotes-sk.js"></script>
-		<script src="quotes-cz.js"></script>
+		<script src="../i18n.js"></script>
+		<script src="quotes/quotes-sk.js"></script>
+		<script src="quotes/quotes-cz.js"></script>
+		<script src="quotes/quotes-us.js"></script>
 	</head>
 	<body>
 		<!-- <figure class="highcharts-figure"> -->
