--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<!-- <script>
-			(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-			(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-			m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-			})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-53L5197ERT"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
 
-			ga('create', 'UA-XXXXX-Y', 'auto');
-			ga('send', 'pageview');
-		</script> -->
+		  gtag('config', 'G-53L5197ERT');
+		</script>
 		<title>Proroci korony</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8">
 		<meta name='viewport' content='width=device-width'>
@@ -34,10 +33,11 @@
 			    <ul class="navbar-nav">
 			      <li class="nav-item nav-link" id="sr">SR</li>
 			      <li class="nav-item nav-link" id="cr">CR</li>
-
-			      <div class="nav-item fb-share-button" data-href="https://granci.github.io/proroci-korony/" data-layout="button_count" data-size="small">
-			      	<a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https://granci.github.io/proroci-korony/&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore"/>
-			      </div>
+			      <li class="nav-item nav-link">
+				      <div class="nav-item fb-share-button" data-href="https://granci.github.io/proroci-korony/" data-layout="button_count" data-size="small">
+				      	<a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https://granci.github.io/proroci-korony/&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore"/>
+				      </div>
+			      </li>
 
 			      <!-- <li class="nav-item dropdown">
 			        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -53,7 +53,7 @@
 			  </div>
 			</nav>
 			<div class="chart-container">
-				<iframe id="chart" src="https://granci.github.io/proroci-korony/chart.html?country=sr&lang=sk" frameborder="0" marginheight="0" marginwidth="0" width="100%" height="100%" scrolling="auto"></iframe>
+				<iframe id="chart" src="https://granci.github.io/proroci-korony/chart/?country=sr&lang=sk" frameborder="0" marginheight="0" marginwidth="0" width="100%" height="100%" scrolling="auto"></iframe>
 			</div>
 		</div>
 	</body>
