--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 
 		  gtag('config', 'G-53L5197ERT');
 		</script>
-		<title>Proroci korony</title>
+		<title>Corona quotes</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8">
 		<meta name='viewport' content='width=device-width'>
-  		<meta property="og:title" content="Proroci korony" />
+  		<meta property="og:title" content="Corona quotes" />
   		<link rel="stylesheet" href="main.css">
   		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
   		<script async defer crossorigin="anonymous" src="https://connect.facebook.net/sk_SK/sdk.js#xfbml=1&version=v8.0" nonce="EQAkJvAR"></script>
@@ -25,7 +25,9 @@
 		<div class="container-fluid">
 			<div id="fb-root" class="fb-root"></div>
 			<nav class="navbar navbar-expand-lg navbar-light bg-light">
-			  <a class="navbar-brand" href="">Proroci korony</a>
+			  <!-- <a class="navbar-brand" href=""> -->
+			  	<img class="logo" src="img/corona.png" alt="Corona virus" width="40" height="40">
+			  <!-- </a> -->
 			  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 			    <span class="navbar-toggler-icon"></span>
 			  </button>
@@ -33,6 +35,7 @@
 			    <ul class="navbar-nav">
 			      <li class="nav-item nav-link" id="sr">SR</li>
 			      <li class="nav-item nav-link" id="cr">CR</li>
+			      <li class="nav-item nav-link" id="us">USA</li>
 			      <li class="nav-item nav-link">
 				      <div class="nav-item fb-share-button" data-href="https://granci.github.io/proroci-korony/" data-layout="button_count" data-size="small">
 				      	<a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https://granci.github.io/proroci-korony/&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore"/>
@@ -53,7 +56,7 @@
 			  </div>
 			</nav>
 			<div class="chart-container">
-				<iframe id="chart" src="https://granci.github.io/proroci-korony/chart/?country=sr&lang=sk" frameborder="0" marginheight="0" marginwidth="0" width="100%" height="100%" scrolling="auto"></iframe>
+				<iframe id="chart" frameborder="0" marginheight="0" marginwidth="0" width="100%" height="100%" scrolling="auto"></iframe>
 			</div>
 		</div>
 	</body>
