--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 
 		  gtag('config', 'G-53L5197ERT');
 		</script>
-		<title>Corona quotes</title>
+		<title>Covidology</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8">
 		<meta name='viewport' content='width=device-width'>
-  		<meta property="og:title" content="Corona quotes" />
+  		<meta property="og:title" content="Covidology" />
   		<link rel="stylesheet" href="main.css">
   		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
-  		<script async defer crossorigin="anonymous" src="https://connect.facebook.net/sk_SK/sdk.js#xfbml=1&version=v8.0" nonce="EQAkJvAR"></script>
+  		<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_EN/sdk.js#xfbml=1&version=v8.0" nonce="EQAkJvAR"></script>
 		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 		<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script>
 		<script src="i18n.js"></script>
@@ -37,7 +37,7 @@
 			      <li class="nav-item nav-link" id="cr">CR</li>
 			      <li class="nav-item nav-link" id="us">USA</li>
 			      <li class="nav-item nav-link">
-				      <div class="nav-item fb-share-button" data-href="https://granci.github.io/proroci-korony/" data-layout="button_count" data-size="small">
+				      <div class="fb-share-button" data-href="https://granci.github.io/proroci-korony/" data-layout="button_count" data-size="small">
 				      	<a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https://granci.github.io/proroci-korony/&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore"/>
 				      </div>
 			      </li>
