added lang selector

--- a/index.html
+++ b/index.html
@@ -28,30 +28,33 @@
 			  <!-- <a class="navbar-brand" href=""> -->
 			  	<img class="logo" src="img/corona.png" alt="Corona virus" width="40" height="40">
 			  <!-- </a> -->
-			  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+			  <button class="navbar-toggler right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 			    <span class="navbar-toggler-icon"></span>
 			  </button>
 			  <div class="collapse navbar-collapse" id="navbarNavDropdown">
 			    <ul class="navbar-nav">
-			      <li class="nav-item nav-link" id="sr">SR</li>
-			      <li class="nav-item nav-link" id="cr">CR</li>
-			      <li class="nav-item nav-link" id="us">USA</li>
+			      <li class="country nav-item nav-link" id="sr">SR</li>
+			      <li class="country nav-item nav-link" id="cr">CR</li>
+			      <li class="country nav-item nav-link" id="us">USA</li>
 			      <li class="nav-item nav-link">
 				      <div class="fb-share-button" data-href="https://granci.github.io/proroci-korony/" data-layout="button_count" data-size="small">
 				      	<a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https://granci.github.io/proroci-korony/&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore"/>
 				      </div>
 			      </li>
-
-			      <!-- <li class="nav-item dropdown">
+			  	</ul>
+			  </div>
+			  <div class="collapse navbar-collapse navbar-right right" id="navbarNavDropdown">
+			    <ul class="navbar-nav">
+			      <li class="nav-item dropdown">
 			        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-			          Jazyk
+			          Lang
 			        </a>
 			        <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-			          <a class="dropdown-item" href="#">Slovensky</a>
-			          <a class="dropdown-item" href="#">Cesky</a>
-			          <a class="dropdown-item" href="#">English</a>
+			          <a class="lang dropdown-item" id="sk">Slovensky</a>
+			          <a class="lang dropdown-item" id="cz">Česky</a>
+			          <a class="lang dropdown-item" id="en">English</a>
 			        </div>
-			      </li> -->
+			      </li>
 			    </ul>
 			  </div>
 			</nav>
