--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
 		<meta http-equiv="content-type" content="text/html; charset=utf-8">
 		<meta name='viewport' content='width=device-width'>
   		<meta property="og:title" content="Covidology" />
+  		<meta property="og:url"           content="http://covidology.granci.com/" />
+		<meta property="og:type"          content="website" />
+		<meta property="og:title"         content="Covidology" />
+		<meta property="og:description"   content="A science of Covid-19 prediction" />
+		<meta property="og:image"         content="http://covidology.granci.com/img/corona.png" />
   		<link rel="stylesheet" href="main.css">
   		<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css">
   		<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_EN/sdk.js#xfbml=1&version=v8.0" nonce="EQAkJvAR"></script>
@@ -28,7 +33,7 @@
 			  <!-- <a class="navbar-brand" href=""> -->
 			  	<img class="logo" src="img/corona.png" alt="Corona virus" width="40" height="40">
 			  <!-- </a> -->
-			  <button class="navbar-toggler right" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+			  <button class="navbar-toggler right top" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
 			    <span class="navbar-toggler-icon"></span>
 			  </button>
 			  <div class="collapse navbar-collapse" id="navbarNavDropdown">
