improved annotation placement

--- a/index.html
+++ b/index.html
@@ -61,9 +61,17 @@
 			          	<input type="checkbox" class="form-check-input" name="filter" value="doctor" id="doctor" checked>
     					<label class="form-check-label" for="doctor">doctor</label>
 			          </a>
-			          <a class="dropdown-item" >
+			          <a class="dropdown-item non-us-item" >
 			          	<input type="checkbox" class="form-check-input" name="filter" value="polititian" id="polititian" checked>
     					<label class="form-check-label" for="polititian">polititian</label>
+			          </a>
+			          <a class="dropdown-item us-item" >
+			          	<input type="checkbox" class="form-check-input" name="filter" value="republican" id="republican" checked>
+    					<label class="form-check-label" for="republican">republican</label>
+			          </a>
+			          <a class="dropdown-item us-item" >
+			          	<input type="checkbox" class="form-check-input" name="filter" value="democrat" id="democrat" checked>
+    					<label class="form-check-label" for="democrat">democrat</label>
 			          </a>
 			          <a class="dropdown-item" >
 			          	<input type="checkbox" class="form-check-input" name="filter" value="publicist,conspirator,artist,other" id="other" checked>
