added Allow overlap

--- a/index.html
+++ b/index.html
@@ -89,6 +89,12 @@
 			          <a class="lang dropdown-item" id="en">English</a>
 			        </div>
 			      </li>
+			      <li class="nav-item nav-link">
+				      <a class="dropdown-item" >
+			          	<input type="checkbox" class="form-check-input" name="overlap" id="overlap" checked>
+						<label class="form-check-label" for="overlap">overlap</label>
+			          </a>
+			      </li>
 			  	</ul>
 			  </div>
 			</nav>
