--- a/chart/index.html
+++ b/chart/index.html
@@ -24,8 +24,8 @@
 		<script src="../jquery.csv.min.js"></script>
 		<script src="chart.js"></script>
 		<script src="../i18n.js"></script>
-		<script src="quotes/quotes-sk.js"></script>
-		<script src="quotes/quotes-cz.js"></script>
+		<script src="quotes/quotes-sr.js"></script>
+		<script src="quotes/quotes-cr.js"></script>
 		<script src="quotes/quotes-us.js"></script>
 	</head>
 	<body>
