--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   		<link rel="stylesheet" href="main.css">
   		<!-- <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"> -->
   		<link rel="stylesheet" href="bootstrap-4.0.0.min.css">
+  		<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
   		<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_EN/sdk.js#xfbml=1&version=v8.0" nonce="EQAkJvAR"></script>
 		<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
 		<!-- <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"></script> -->
@@ -89,6 +90,18 @@
 			          <a class="lang dropdown-item" id="en">English</a>
 			        </div>
 			      </li>
+    			  <li class="nav-item">
+    			  	<!-- <form class="navbar-form navbar-left"> -->
+				      <div class="input-group">
+				        <input type="text" class="form-control" placeholder="search" id="search">
+				        <div class="input-group-btn">
+				          <button type="submit" class="btn btn-default" id="submit">
+				            <i class="glyphicon glyphicon-search"></i>
+				          </button>
+				        </div>
+				      </div>
+				    <!-- </form> -->
+				  </li>
 			      <li class="nav-item nav-link">
 				      <a class="dropdown-item" >
 			          	<input type="checkbox" class="form-check-input" name="overlap" id="overlap" checked>
